@@ -3,17 +3,16 @@
  * Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Servlet.java to edit this template
  */
 package etu2090.framework.servlet;
-<<<<<<< Updated upstream
-=======
 
-import etu2090.framework.FileUpload;
->>>>>>> Stashed changes
 import etu2090.framework.Mapping;
+import etu2090.framework.FileUpload;
 import javax.servlet.ServletConfig;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.Part;
 import etu2090.framework.annotation.Url;
+//import etu2090.framework.model.Dept;
 import etu2090.framework.annotation.Argument;
 import java.lang.reflect.Field;
 import etu2090.framework.ModelViews.ModelView;
@@ -26,6 +25,8 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.HashMap;
 import java.util.Map;
 import java.sql.*;
@@ -34,13 +35,19 @@ import java.util.Enumeration;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.servlet.RequestDispatcher;
+import java.io.*;
 import javax.servlet.ServletException;
+import javax.servlet.annotation.MultipartConfig;
 //import model.Dept;
 //import model.Emp;
 
 /**
  * Front Servlet qui gère les requêtes HTTP.
  */
+@MultipartConfig(fileSizeThreshold=1024*1024*10, 	// 10 MB 
+                 maxFileSize=1024*1024*50,      	// 50 MB
+                 maxRequestSize=1024*1024*100) 
+// location="D:/doc"
 public class FrontServlet extends HttpServlet {
 
     // private static final long serialVersionUID = 1L;
@@ -86,57 +93,60 @@ public class FrontServlet extends HttpServlet {
     }
 
     @SuppressWarnings("empty-statement")
-<<<<<<< Updated upstream
-    public void processRequest(HttpServletRequest req, HttpServletResponse resp) throws Exception  {
+    public void processRequest(HttpServletRequest req, HttpServletResponse resp) throws Exception {
         PrintWriter out = resp.getWriter();
         String url = req.getRequestURI();
         String page = url.substring(url.lastIndexOf("/") + 1);
-    
+
         for (Map.Entry<String, Mapping> entry : this.mappingUrls.entrySet()) {
             String key = entry.getKey();
             Mapping mai = entry.getValue();
-    
 
-                  // Parcourir tous les paramètres et les valeurs du formulaire
-                  Enumeration<String> paramNames = req.getParameterNames();
-                  while (paramNames.hasMoreElements()) {
-                  String paramName = paramNames.nextElement();
-                    out.println(paramName);
-                  }
+            // Parcourir tous les paramètres et les valeurs du formulaire
+            Enumeration<String> paramNames = req.getParameterNames();
+            while (paramNames.hasMoreElements()) {
+                String paramName = paramNames.nextElement();
+                out.println(paramName);
+            }
 
             if (key.compareTo(page) == 0) {
                 try {
                     PrintWriter oPrintWriter = resp.getWriter();
                     Class<?> class1 = Class.forName(packages + "." + mai.getClassName());
-    
+
                     if (class1.getSimpleName().equals(mai.getClassName())) {
                         out.print(page);
-    //                    out.print("cccccccccccccccccc");
+                        // out.print("cccccccccccccccccc");
                         out.println(class1.getSimpleName());
-      //                  out.print("vvvvvvvvvvvv");
-                        Object object = class1.newInstance();
+                        // out.print("vvvvvvvvvvvv");
+                        Object object = class1.getConstructor().newInstance();
                         Map<String, String[]> params = req.getParameterMap();
-                        
-                        object = this.makaParametreDonnees(object, params, class1); // maka an'ilay parametre avy any @ JSP
-                  
+
+                        object = this.makaParametreDonnees(object, params, class1, req, resp); // maka an'ilay parametre
+                                                                                               // avy any @ JSP
+
                         Method[] methods = class1.getDeclaredMethods();
-  //                      out.print("de awn kiiii");
+                        // out.print("de awn kiiii");
                         for (Method method1 : methods) {
                             if (method1.getName().equals(mai.getMethod())) {
                                 out.println(method1.getName());
-                                Object[] arguments = this.mamenoParametreMethode(method1, params); // mameno parametre an'ilay fonction
+
+                                // Object[] arguments = this.mamenoParametreMethode(method1, params); // mameno
+                                // parametre an'ilay fonction
+
+                                Object[] arguments = this.mamenoParametreMethode(method1, params, req, resp);
                                 ModelView view = null;
                                 // out.print("fa awn eeee");
                                 if (arguments != null) {
                                     view = (ModelView) method1.invoke(object, arguments);
-                                    //out.print("mafy enao ee");
+                                    // out.print("mafy enao ee");
                                 } else {
                                     view = (ModelView) method1.invoke(object);
-                                  //  out.print("met zan ee");
+                                    // out.print("met zan ee");
                                 }
-    
+
                                 out.print("View = " + view.getView());
-    
+
                                 if (view.getData() != null) {
                                     for (Map.Entry<String, Object> entry2 : view.getData().entrySet()) {
                                         String key2 = entry2.getKey();
@@ -144,119 +154,22 @@ public class FrontServlet extends HttpServlet {
                                         req.setAttribute(key2, value);
                                     }
                                 }
-    
+
                                 String modelString = "views/" + view.getView();
                                 RequestDispatcher dispatcher = req.getRequestDispatcher(modelString);
                                 dispatcher.forward(req, resp);
+
                             }
                         }
                     }
                 } catch (Exception e) {
-                    out.println(e.getMessage());
-                }
-            }
-        }
-    }    
-     
-=======
-    public void processRequest(HttpServletRequest req, HttpServletResponse resp) throws Exception {
-        // IOException, URISyntaxException, ClassNotFoundException,
-        // InstantiationException, IllegalAccessException, InvocationTargetException,
-        // ServletException
-        PrintWriter out = resp.getWriter();
-        String url = req.getRequestURI();
-        String page = url.substring(url.lastIndexOf("/") + 1);
-
-        for (Map.Entry<String, Mapping> entry : this.mappingUrls.entrySet()) {
-            String key = entry.getKey();
-            Mapping mai = entry.getValue();
-
-            /*
-             * out.println("valeur de url    " + key + "     " +
-             * "    Nom de la classe qui a l'annotation       " + mai.getClassName() +
-             * "       " + "      methodes qui a l'annotation  " + mai.getMethod());
-             * out.println(page);
-             * out.println(key);
-             */
-            if (key.compareTo(page) == 0) {
-
-                try {
-                    PrintWriter oPrintWriter = resp.getWriter();
-                    Class<?> class1 = Class.forName(packages + "." + mai.getClassName());
-                    Object object = class1.newInstance();
-                    Method method = object.getClass().getMethod(mai.getMethod());
-
-                    // oPrintWriter.println("test");
-
-                    // recupere les attributs de la classe
-                    Field[] field = object.getClass().getDeclaredFields();
-
-                    // les transformer en tableau de string pour la comparaison
-                    String[] attributs = new String[field.length];
-                    for (int j = 0; j < field.length; j++) {
-                        attributs[j] = field[j].getName();
-                        /*
-                         * oPrintWriter.println("attribut classe");
-                         * oPrintWriter.print(attributs[j]);
-                        */
-                    }
-
-                    // Parcourir tous les paramètres et les valeurs du formulaire
-                    Enumeration<String> paramNames = req.getParameterNames();
-                    while (paramNames.hasMoreElements()) {
-                        String paramName = paramNames.nextElement();
-                        /*
-                         * out.println(paramName);
-                         * out.print("trueeeeee");
-                         */
-
-                        // Verifier si le parametre fait partie des attributs de la classe
-                        for (int j = 0; j < attributs.length; j++) {
-                            if (attributs[j].compareTo(paramName) == 0) {
-                                String[] paramValues = req.getParameterValues(paramName);
-                                Method met = object.getClass().getMethod("set" + attributs[j], field[j].getType());
-                                Object paramValue = convertParamValue(paramValues[0], field[j].getType());
-                                met.invoke(object, paramValue);
-                            }
-
-                        }
-
-                    }
-
-                    /*
-                     * Map<String, String[]> params = req.getParameterMap();
-                     * for(Map.Entry<String, String[]> param : params.entrySet()) {
-                     * Field attr = object.getClass().getField(param.getKey());
-                     * object.getClass().getMethod("set"+this.makeUpperCaseInitialLetter(param.
-                     * getKey()), attr.getType()).invoke(object,
-                     * attr.getType().cast(param.getValue()[0]));
-                     * }
-                    */
-
-                    ModelView view = (ModelView) method.invoke(object , (Object[])null);
-                    String modelString = "views/" + view.getView();
-                    Map<String, Object> data = view.getData();
-                    for (Map.Entry<String, Object> dEntry : view.getData().entrySet()) {
-                        String k = dEntry.getKey();
-                        Object o = dEntry.getValue();
-                        req.setAttribute(k, o);
-                    }
-                    RequestDispatcher dispatcher = req.getRequestDispatcher(modelString);
-                    dispatcher.forward(req, resp);
-                } catch (Exception e) {
-                    e.printStackTrace();
-                    e.printStackTrace(out);
                     // out.println(e.getMessage());
-
+                    e.printStackTrace(out);
                 }
-
             }
-
         }
-
     }
 
->>>>>>> Stashed changes
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws javax.servlet.ServletException, IOException {
@@ -286,19 +199,11 @@ public class FrontServlet extends HttpServlet {
         }
     }
 
-<<<<<<< Updated upstream
-    public void getAllMapping(String packagename) throws URISyntaxException{
-        String path=packagename.replaceAll("[.]", "/");
-        URL packageURL=Thread.currentThread().getContextClassLoader().getResource(path);
-        File packageDirectory=new File(packageURL.toURI());
-        File [] inside=packageDirectory.listFiles();
-=======
     public void getAllMapping(String packagename) throws URISyntaxException {
         String path = packagename.replaceAll("[.]", "/");
         URL packageURL = Thread.currentThread().getContextClassLoader().getResource(path);
         File packageDirectory = new File(packageURL.toURI());
         File[] inside = packageDirectory.listFiles();
->>>>>>> Stashed changes
         for (int i = 0; i < inside.length; i++) {
             String[] n = inside[i].getName().split("[.]");
 
@@ -314,7 +219,6 @@ public class FrontServlet extends HttpServlet {
                         this.mappingUrls.put(cle, m);
                     }
                 }
-
             } catch (ClassNotFoundException e) {
 
             }
@@ -340,7 +244,6 @@ public class FrontServlet extends HttpServlet {
         this.mappingUrls = mappingUrls;
     }
 
- 
     private Object convertParamValue(String paramValue, Class<?> paramType) throws Exception {
         if (paramType == String.class) {
             return paramValue;
@@ -348,82 +251,83 @@ public class FrontServlet extends HttpServlet {
             return Integer.parseInt(paramValue);
         } else if (paramType == boolean.class || paramType == Boolean.class) {
             return Boolean.parseBoolean(paramValue);
-        }else if (paramType == double.class || paramType == Double.class) {
+        } else if (paramType == double.class || paramType == Double.class) {
             return Double.parseDouble(paramValue);
-       } else if (paramType == Long.class || paramType == long.class) {
+        } else if (paramType == Long.class || paramType == long.class) {
             return Long.parseLong(paramValue);
         } else if (paramType == Date.class) {
             SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd");
             return new java.sql.Date(formatter.parse(paramValue).getTime());
-        }else if (paramType == Timestamp.class) {
+        } else if (paramType == Timestamp.class) {
             SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
             return new java.sql.Timestamp(formatter.parse(paramValue).getTime());
-           }else if(paramType == Time.class) {
-              SimpleDateFormat formatter = new SimpleDateFormat("HH:mm");
+        } else if (paramType == Time.class) {
+            SimpleDateFormat formatter = new SimpleDateFormat("HH:mm");
             return new java.sql.Time(formatter.parse(paramValue).getTime());
-<<<<<<< Updated upstream
-        }else {
+        } else {
             return null;
         }
     }
 
-
-    public Object liste(Class<?> type, String[] value){
+    public Object liste(Class<?> type, String[] value) {
         if (type == String.class) {
             return value;
-        }
-        else if (type == Integer.class || type == int.class) {
+        } else if (type == Integer.class || type == int.class) {
             int[] liste = new int[value.length];
-            for(int i=0; i<value.length; i++) {
+            for (int i = 0; i < value.length; i++) {
                 liste[i] = Integer.parseInt(value[i]);
             }
             return liste;
-        }
-        else if (type == Double.class || type == double.class) {
+        } else if (type == Double.class || type == double.class) {
             double[] liste = new double[value.length];
-            for(int i=0; i<value.length; i++) {
+            for (int i = 0; i < value.length; i++) {
                 liste[i] = Double.parseDouble(value[i]);
             }
             return liste;
-        }
-        else {
+        } else {
             return null;
         }
     }
 
-    public Object[] mamenoParametreMethode(Method method, Map<String, String[]> params) throws Exception{
+    public Object[] mamenoParametreMethode(Method method, Map<String, String[]> params, HttpServletRequest req,
+            HttpServletResponse resp) throws Exception {
         Object[] arguments = null;
-        if(params.isEmpty()==false){
+        if (!params.isEmpty()) {
             Parameter[] parameters = method.getParameters();
-            if(parameters.length != 0) {
+            if (parameters.length != 0) {
                 arguments = new Object[parameters.length];
                 int i = 0;
                 for (Parameter parameter : parameters) {
-                    for (String paramName : params.keySet()) {
-                        if(paramName.equals(parameter.getAnnotation(Argument.class).value())) {
-                            String[] values = params.get(paramName);
-                            Object reponse = null;
-                            if(values!=null && values.length == 1){
-                                arguments[i] = convertParamValue(values[0],parameter.getType());
-                            } 
-                            
-                            else if(values!=null && values.length > 1) {
-                                arguments[i] = liste(parameter.getType(), values);
-                            }  
-                        }   
-                    }
+                    Argument annotation = parameter.getAnnotation(Argument.class);
+                    if (annotation != null) {
+                        String paramName = annotation.value();
+                        String[] values = params.get(paramName);
+                        if (parameter.getType() == FileUpload.class) {
+                            // this.checkFileUpload(arguments[i], req, resp);
+                            arguments[i] = this.preparefile(paramName, req, resp);
+                          }
+                        else if (values != null && values.length > 0) {
+                            if (parameter.getType().isArray()) {
+                                arguments[i] = liste(parameter.getType().getComponentType(), values);
+                            } else {
+                                    System.out.println(paramName);
+                                    arguments[i] = convertParamValue(values[0], parameter.getType());
+                            }
+                        }
+                        
+                    } 
                     i++;
-                }     
+                }
             }
         }
         return arguments;
     }
 
-
-    public Object makaParametreDonnees(Object object, Map<String, String[]> params, Class<?> class1) throws Exception {
+    public Object makaParametreDonnees(Object object, Map<String, String[]> params, Class<?> class1,
+            HttpServletRequest request, HttpServletResponse response) throws Exception {
         // Obtient tous les champs de la classe
         Field[] fields = class1.getDeclaredFields();
-        
+
         for (Field field : fields) {
             // Vérifie si le champ correspond à un paramètre dans le formulaire
             String fieldName = field.getName();
@@ -431,62 +335,87 @@ public class FrontServlet extends HttpServlet {
                 // Obtient la valeur du paramètre du formulaire
                 String[] fieldValues = params.get(fieldName);
                 String fieldValue = fieldValues[0]; // Suppose qu'il y a une seule valeur pour le paramètre
-                
+
                 // Convertit la valeur du paramètre au type approprié
                 Object convertedValue = convertParamValue(fieldValue, field.getType());
-                
+
                 // Définit la valeur du champ dans l'objet
                 field.setAccessible(true);
                 field.set(object, convertedValue);
             }
         }
-        
+        this.checkFileUpload(object, request, response);
+
         return object;
     }
-    
 
+    ////////////////////////////////////////////
 
-    //else if (paramType.toString() == "java.sql.Date") {
-      //  return java.sql.Date.valueOf(paramValue);
-    
-=======
-        } else if (paramType == FileUpload.class) {
-            // Supposons que le paramètre "paramValue" contienne le chemin du fichier à
-            // uploader
-            File file = new File("D:/fichier/test.txt");
-
-            // Vérifiez si le fichier existe
-            if ( file.exists() ) {
-                try {
-                    // Lisez les octets du fichier
-                    byte[] fileBytes = Files.readAllBytes(Path.of(file.getAbsolutePath()));
-
-                    // Récupérez le nom du fichier
-                    String fileName = file.getName();
-
-                    // Créez une nouvelle instance de FileUpload avec le nom et les octets du
-                    // fichier
-                    FileUpload fileUpload = new FileUpload();
-                    fileUpload.setname(fileName);
-                    fileUpload.setbyte(fileBytes);
-
-                    // Retournez l'instance de FileUpload
-                    return fileUpload;
-                } catch (Exception e) {
-                    // Gérez l'exception d'E/S si elle se produit lors de la lecture des octets du
-                    // fichier
-                    // e.getMessage();
-                    throw new Exception("Erreur lors de la lecture du fichier : " + paramValue);
+    public void checkFileUpload(Object ob, HttpServletRequest request, HttpServletResponse response)
+            throws IOException, ServletException, Exception {
+        Field[] attribut = ob.getClass().getDeclaredFields();
+        Method[] fonction = ob.getClass().getDeclaredMethods();
+        for (int i = 0; i < attribut.length; i++) {
+            if (attribut[i].getType() == FileUpload.class) {
+                for (int j = 0; j < fonction.length; j++) {
+                    if (fonction[j].getName().compareTo("set" + attribut[i].getName()) == 0) {
+                        // System.out.println("hhhhhhhhhhhhhhhh");
+                        FileUpload f = this.preparefile(attribut[i].getName(), request, response);
+                        fonction[j].invoke(ob, f);
+                    }
                 }
-            } else {
-                throw new FileNotFoundException("Le fichier n'existe pas : " + paramValue);
             }
-        } else {
-            return null;
+
         }
     }
+
+    public FileUpload preparefile(String file, HttpServletRequest request, HttpServletResponse response)
+            throws IOException, ServletException, Exception {
+        try {
+            FileUpload fichier = new FileUpload();
+            Part filePart = null;
+            // System.out.println(file);
+            java.util.Collection<Part> parts = request.getParts();
+            for (Part p : parts) {
+                if (p.getName().equals(file)) {
+                    filePart = p;
+                    break;
+                }
+            }
+            String submittedFileName = filePart.getSubmittedFileName();
+            fichier.setname(submittedFileName);
+            // System.out.println(submittedFileName);
+            InputStream fileInputStream = filePart.getInputStream();
+            ByteArrayOutputStream byteOutputStream = new ByteArrayOutputStream();
+
+            byte[] buffer = new byte[4096];
+            int bytesRead;
+            while ((bytesRead = fileInputStream.read(buffer)) != -1) {
+                byteOutputStream.write(buffer, 0, bytesRead);
+            }
+
+            byte[] fileBytes = byteOutputStream.toByteArray();
+
+            Byte[] fileBytesWrapper = new Byte[fileBytes.length];
+            for (int i = 0; i < fileBytes.length; i++) {
+                fileBytesWrapper[i] = Byte.valueOf(fileBytes[i]);
+            }
+            fichier.setbyte(fileBytesWrapper);
+            fileInputStream.close();
+            byteOutputStream.close();
+            System.out.println(fichier.getname());
+            System.out.println(fichier.getbyte());
+            return fichier;
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            // System.out.println(e.getMessage());
+            return null;
+        }
+
+    }
+
     // else if (paramType.toString() == "java.sql.Date") {
     // return java.sql.Date.valueOf(paramValue);
 
->>>>>>> Stashed changes
 }
